Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2008-10-30 Stephane Letz  <letz@grame.fr>
	
	* Fix Midi port initialization in JackNetDriver.

2008-10-15 Stephane Letz  <letz@grame.fr>
	
	* Fix a crash in JackEngine::Close when backend cannot be loaded.
	* Tim Blechmann optimization patch.
	* Backport of latest Paul alsa_seqmidi changes.

2008-10-15 Stephane Letz  <letz@grame.fr>
	
	* Fix a conflict with Audio Hijack in JackCoreAudioDriver. 

2008-10-09 Stephane Letz  <letz@grame.fr>
	
	* Use a mutex to make jack_client_open/jack_client_close thread safe, remove use of jack_init/jack_uninit.

2008-10-08 Stephane Letz  <letz@grame.fr>
	
	* Fix a SMP related bug introduced in rev 2957 : remove the __SMP__ flag and define LOCK for SMP in all cases.

2008-10-02 Stephane Letz  <letz@grame.fr>
	
	* Correct file permission for jack-shm-registry POSIX shared memory segment.
	* Checking for libsamplerate in waf, fix ticket #89." 
        * Header cleanup, add --clients and --ports options in configure.

2008-09-22 Stephane Letz  <letz@grame.fr>
	
	* Cleanup jack_port_id_t/jack_port_t mess, should work again on 64 bits machines."

2008-09-20 Stephane Letz  <letz@grame.fr>
	
	* Michael Voigt JackAPI cleanup patch.

2008-09-19 Stephane Letz  <letz@grame.fr>
	
	* Michael Voigt JackTime cleanup patch.

2008-09-17 Stephane Letz  <letz@grame.fr>
	
	* New JackDriverInfo class to cleanup driver loading code.

2008-09-08 Stephane Letz  <letz@grame.fr>
	
	* Better symbols export for server and client side libraries. 

2008-09-06 Stephane Letz  <letz@grame.fr>
	
	* Correct driver hierarchy on macosx and windows targets.

2008-09-05 Stephane Letz  <letz@grame.fr>
	
	* Merge Michael Voigt "drops" branch after reorganization step.
